--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "inside-windows",
+  "name": "folio",
   "version": "0.1.0",
   "author": "Leonid Zichkov",
   "private": true,
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "gulp-htmlmin": "^5.0.1",
+    "gulp-print": "^5.0.2",
     "jquery": "^3.3.1",
     "jquery-validation": "^1.19.1",
     "jquery.maskedinput": "^1.4.1",
