--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jquery": "^3.3.1",
     "jquery-validation": "^1.19.1",
     "jquery.maskedinput": "^1.4.1",
+    "shufflejs": "^5.2.3",
     "slick-carousel": "^1.8.1",
     "vanilla-text-mask": "^5.1.1",
     "vex-js": "^4.1.0"
